# salty-storage

./: .gitmodules  Cargo.toml  README.md  settings.toml
src/: api.rs  app_state.rs  config.rs  db.rs  errors.rs  main.rs  utils.rs
src/api/: v0.rs
src/api/v0/: auth.rs  user.rs
src/model/: user.rs
src/sql/: user.html
